// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/LineSeparator Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <hr
    className="lineSeparator color-secondary size-sm"
  />
  <hr
    className="lineSeparator color-primary size-sm"
  />
</div>
`;

exports[`Storyshots Atoms/LineSeparator Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <hr
    className="lineSeparator color-primary size-sm"
  />
</div>
`;

exports[`Storyshots Atoms/LineSeparator Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <hr
    className="lineSeparator color-primary size-sm"
  />
  <hr
    className="lineSeparator color-primary size-md"
  />
  <hr
    className="lineSeparator color-primary size-lg"
  />
</div>
`;
